Update Queries for product and categories.ipynb

--- a/Queries for product and categories.ipynb
+++ b/Queries for product and categories.ipynb
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = 'phan1996')\n",
+    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = '')\n",
     "cur = conn.cursor()\n",
     "cur.execute('SELECT * FROM products LIMIT 5')\n",
     "cur.fetchall()"
@@ -143,7 +143,7 @@
     }
    ],
    "source": [
-    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = 'phan1996')\n",
+    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = '')\n",
     "cur = conn.cursor()\n",
     "cur.execute('SELECT DISTINCT category FROM products')\n",
     "cat cur.fetchall()"
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = 'phan1996')\n",
+    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = '')\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"SELECT * FROM products WHERE category ='Điện Thoại - Máy Tính Bảng' LIMIT 10\")\n",
     "cat1 = cur.fetchall()\n"
@@ -311,7 +311,7 @@
     }
    ],
    "source": [
-    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = 'phan1996')\n",
+    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = '')\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"SELECT id,name FROM categories LIMIT 16\")\n",
     "cur.fetchall()"
@@ -334,7 +334,7 @@
     }
    ],
    "source": [
-    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = 'phan1996')\n",
+    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = '')\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"SELECT DISTINCT category_id FROM products\")\n",
     "len(cur.fetchall())"
@@ -348,7 +348,7 @@
    },
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = 'phan1996')\n",
+    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = '')\n",
     "cur = conn.cursor()\n",
     "query ='''\n",
     "SELECT name FROM categories\n",
@@ -550,7 +550,7 @@
     }
    ],
    "source": [
-    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = 'phan1996')\n",
+    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = '')\n",
     "cur = conn.cursor()\n",
     "query ='''\n",
     "SELECT p.id, c.id FROM categories as c\n",
@@ -588,7 +588,7 @@
     }
    ],
    "source": [
-    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = 'phan1996')\n",
+    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = '')\n",
     "cur = conn.cursor()\n",
     "query ='''\n",
     "SELECT  p.id, c.id FROM categories as c\n",
@@ -761,7 +761,7 @@
     }
    ],
    "source": [
-    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = 'phan1996')\n",
+    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = '')\n",
     "cur = conn.cursor()\n",
     "query ='''\n",
     "WITH c1 AS\n",
@@ -794,7 +794,7 @@
     }
    ],
    "source": [
-    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = 'phan1996')\n",
+    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = '')\n",
     "cur = conn.cursor()\n",
     "query ='''\n",
     "WITH c1 AS\n",
@@ -1594,7 +1594,7 @@
     }
    ],
    "source": [
-    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = 'phan1996')\n",
+    "conn = psycopg2.connect(user = 'philong', database = 'tiki', password = '')\n",
     "cur = conn.cursor()\n",
     "query = \"SELECT * FROM products WHERE category = %s LIMIT 50 OFFSET %s\"\n",
     "val = ('Nhà Cửa - Đời Sống',50)\n",
